tests/spec/compile-pass/003_result_try.zn
// category: compile-pass
// profile: freestanding
// purpose: try propagates Result errors

module tests.pass.resultTry;

import core.result.{Result, Ok, Err};

enum ParseError {
    Empty,
}

fn parseDigit(text: StringSlice) -> Result<U8, ParseError> {
    if text.len == 0 {
        return Err(ParseError.Empty);
    }
    return Ok(1);
}

fn parsePair(a: StringSlice, b: StringSlice) -> Result<U8, ParseError> {
    let left = try parseDigit(a);
    let right = try parseDigit(b);
    return Ok(left + right);
}
