tests/spec/compile-fail/097_match_non_exhaustive.zn
// category: compile-fail
// profile: freestanding
// purpose: match over enum must be exhaustive unless a wildcard branch exists

module tests.fail.matchNonExhaustive;

enum State {
    Ready(U32),
    Waiting,
    Done,
}

fn bad(state: State) -> U32 {
    return match state {
        Ready(value) => value,
        Done => 0,
    }; // expected-error: match is not exhaustive; missing Waiting
}
